language/move-model/tests/sources/invariants_err.exp
error: expected `bool` but found `num` in expression

   ┌── tests/sources/invariants_err.move:9:15 ───
   │
 9 │     invariant x + 1;
   │               ^^^^^
   │

error: `old(..)` expression not allowed in this context

    ┌── tests/sources/invariants_err.move:11:15 ───
    │
 11 │     invariant old(x) > 0;
    │               ^^^^^^
    │

error: data invariants cannot depend on global state (directly or indirectly uses a global spec var or resource storage).

    ┌── tests/sources/invariants_err.move:13:5 ───
    │
 13 │     invariant exists<S>(0x0);
    │     ^^^^^^^^^^^^^^^^^^^^^^^^^
    │

error: data invariants cannot depend on global state (directly or indirectly uses a global spec var or resource storage).

    ┌── tests/sources/invariants_err.move:14:5 ───
    │
 14 │     invariant global<S>(0x0).x == x;
    │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │

error: data invariants cannot depend on global state (directly or indirectly uses a global spec var or resource storage).

    ┌── tests/sources/invariants_err.move:15:5 ───
    │
 15 │     invariant spec_var > 0;
    │     ^^^^^^^^^^^^^^^^^^^^^^^
    │

error: data invariants cannot depend on global state (directly or indirectly uses a global spec var or resource storage).

    ┌── tests/sources/invariants_err.move:17:5 ───
    │
 17 │     invariant rec_fun(true);
    │     ^^^^^^^^^^^^^^^^^^^^^^^^
    │
